--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -26,9 +26,9 @@ jobs:
       working-directory: ./rag-app
       run: make install
 
-    - name: Run tests
-      working-directory: ./rag-app
-      run: make test
+    #- name: Run tests
+      #working-directory: ./rag-app
+      #run: make test
 
     #- name: Run distcheck
     #  run: make distcheck
