Have more fleshed out structure including ingestion pipelines, I've also started working on the embedding logic

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,7 +24,10 @@
 				"ms-toolsai.jupyter"
 			]
 		}
-	}
+	},
+	"mounts": [
+  "source=${localEnv:HOME}/.gitconfig,target=/home/vscode/.gitconfig,type=bind,consistency=cached"
+]
 
 	// Configure tool-specific properties.
 	// "customizations": {},
