--- a/rag-app/deploy/docker/postgres/docker-compose.yaml
+++ b/rag-app/deploy/docker/postgres/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3" #TODO: Update this/check what I should set to.
 
 services:
   postgres:
@@ -6,11 +6,11 @@ services:
       context: .
       dockerfile: pgvector.Dockerfile
     ports:
-      - "5432:5432"
+      - "${POSTGRES_PORT}:5432"
     volumes:
       - ./data:/var/lib/postgresql/data
       - ./init_pgvector.sql:/docker-entrypoint-initdb.d/init_pgvector.sql
     environment:
-      POSTGRES_USER: myuser
-      POSTGRES_PASSWORD: mypassword
-      POSTGRES_DB: mydb
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
