--- a/rag-app/pyproject.toml
+++ b/rag-app/pyproject.toml
@@ -10,6 +10,8 @@ readme = "README.md"
 python = "^3.12"
 fastapi = "^0.115.0"
 uvicorn = "^0.30.6"
+sentence-transformers = "^3.1.1"
+python-dotenv = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.7"
