--- a/rag-app/pyproject.toml
+++ b/rag-app/pyproject.toml
@@ -12,6 +12,7 @@ fastapi = "^0.115.0"
 uvicorn = "^0.30.6"
 sentence-transformers = "^3.1.1"
 python-dotenv = "^1.0.1"
+psycopg2 = "^2.9.9"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.7"
