--- a/rag-app/pyproject.toml
+++ b/rag-app/pyproject.toml
@@ -5,6 +5,7 @@ description = "A simple rag application to help AI engineers in training on Oxfo
 authors = ["Andrew P. McMahon"]
 license = "MIT"
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
