Fixed pytest issues.

--- a/rag-app/pyproject.toml
+++ b/rag-app/pyproject.toml
@@ -20,6 +20,12 @@ boto3 = "^1.35.36"
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.7"
 pytest = "^8.3.3"
+pytest-asyncio = "^0.24.0"
+
+[tool.pytest.ini_options]
+pythonpath = [
+  "."
+]
 
 [build-system]
 requires = ["poetry-core"]
