--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,7 @@
 	"features": {
 		"ghcr.io/devcontainers/features/github-cli:1": {},
 		"ghcr.io/va-h/devcontainers-features/uv:1": {}
-	},  
+	},
 	"runArgs": ["--network=host"], // allows access to host network -> to be platform independent you would use a new docker network.
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
@@ -17,7 +17,7 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "pip3 install -r requirements.txt",
+	"postCreateCommand": "pip3 install -r requirements.txt && git config --global --add safe.directory /workspaces/oxford-genai-capstone",
 	"customizations": {
 		"vscode": {
 			"extensions": [
