--- a/rag-app/pyproject.toml
+++ b/rag-app/pyproject.toml
@@ -21,6 +21,7 @@ boto3 = "^1.35.36"
 ruff = "^0.6.7"
 pytest = "^8.3.3"
 pytest-asyncio = "^0.24.0"
+pre-commit = "^4.0.1"
 
 [tool.pytest.ini_options]
 pythonpath = [
