Tidying up and fixing the api controllers.

--- a/rag-app/Makefile
+++ b/rag-app/Makefile
@@ -6,14 +6,15 @@ install:
 	poetry install
 
 # Run the FastAPI app
-run:
+run-app:
 	poetry run bash -c 'PYTHONPATH=$(SERVER_DIR)/src uvicorn server.src.main:app --reload'
 
+# Haven't tested this.
 run-ingestion-and-build-db: build-db
 	poetry run python $(SERVER_DIR)/src/ingestion/pipeline.py
 
 # Download the paper metadata from arixv using the public API.
-download:
+download-data:
 	poetry run python $(SERVER_DIR)/src/ingestion/arxiv_client.py
 
 # Note that the below is ingestion of the downloaded jsons, not downloading of arxiv data.
@@ -44,3 +45,7 @@ build-db:
 remove-db:
 	docker compose --env-file .env -f deploy/docker/postgres/docker-compose.yaml down
 	rm -rf deploy/docker/postgres/data
+
+# TODO: Fix the fact I need to build-db outside the dev container and then run other commands inside it.
+# deploy-local: donwload-data run-ingestion run-app
+# 	echo "Local deployment complete. Run 'make remove-db' to clean up the database."
