--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -10,21 +10,25 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v4
-      with:
-       python-version: '3.12'
+      - name: Do stuff...
+        run: echo "Stuff will be done!"
+
+    # steps:
+    # - uses: actions/checkout@v4
+    # - uses: actions/setup-python@v4
+    #   with:
+    #    python-version: '3.12'
 
     #- name: configure
       #run: ./configure
-    - name: Install base dep's
-      run: pip3 install -r requirements.txt
+    # - name: Install base dep's
+    #   run: pip3 install -r requirements.txt
 
-    - name: Install dependencies
-      working-directory: ./rag-app
-      run: make install
+    # - name: Install dependencies
+    #   working-directory: ./rag-app
+    #  run: make install
 
     #- name: Run tests
       #working-directory: ./rag-app
