--- a/rag-app/pyproject.toml
+++ b/rag-app/pyproject.toml
@@ -16,6 +16,7 @@ python-dotenv = "^1.0.1"
 psycopg2 = "^2.9.9"
 llama-index = "^0.11.16"
 boto3 = "^1.35.36"
+pyyaml = "^6.0.2"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.7"
