--- a/rag-app/pyproject.toml
+++ b/rag-app/pyproject.toml
@@ -18,6 +18,7 @@ llama-index = "^0.11.16"
 boto3 = "^1.35.36"
 pyyaml = "^6.0.2"
 pydantic-settings = "^2.6.0"
+tracely = "^0.1.3"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.7"
