--- a/rag-app/pyproject.toml
+++ b/rag-app/pyproject.toml
@@ -19,6 +19,7 @@ boto3 = "^1.35.36"
 pyyaml = "^6.0.2"
 pydantic-settings = "^2.6.0"
 tracely = "^0.1.3"
+trulens = "^1.2.4"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.7"
