--- a/.gitignore
+++ b/.gitignore
@@ -161,6 +161,9 @@ cython_debug/
 #Ollama
 ollama/
 
+#Other
+.DS_Store
+
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
