moving to devcontainer setup for ease and edited readme.

--- a/.gitignore
+++ b/.gitignore
@@ -164,6 +164,9 @@ ollama/
 #Other
 .DS_Store
 
+# AWS
+aws/
+
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
