--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,7 @@
 	"runArgs": ["--network=host"], // allows access to host network -> to be platform independent you would use a new docker network.
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "pip3 install -r requirements.txt && git config --global --add safe.directory /workspaces/oxford-genai-capstone",
+	//"postCreateCommand": "pip3 install -r requirements.txt && git config --global --add safe.directory /workspaces/oxford-genai-capstone",
 	"customizations": {
 		"vscode": {
 			"extensions": [
