--- a/rag-app/pyproject.toml
+++ b/rag-app/pyproject.toml
@@ -22,6 +22,7 @@ tracely = "^0.1.3"
 trulens = "^1.2.4"
 opik = "^1.0.4"
 pytest-asyncio = "^0.24.0"
+streamlit = "^1.42.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.7"
