--- a/rag-app/pyproject.toml
+++ b/rag-app/pyproject.toml
@@ -23,6 +23,7 @@ trulens = "^1.2.4"
 opik = "^1.0.4"
 pytest-asyncio = "^0.24.0"
 streamlit = "^1.42.0"
+pytest-cov = "^6.0.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.7"
