--- a/rag-app/.env.example
+++ b/rag-app/.env.example
@@ -1,15 +1,26 @@
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
-POSTGRES_PORT=
-POSTGRES_HOST=
+POSTGRES_USER=myuser
+POSTGRES_PASSWORD=mypassword
+POSTGRES_DB=mydb
+POSTGRES_PORT=5432
+POSTGRES_HOST=localhost
 
 ARXIV_API_URL = "http://export.arxiv.org/api/query"
 DATA_PATH = './data'
+APP_NAME="Oxford GenAI LLMOps Project "
 
 ENVIRONMENT=dev
 DEBUG=True
 
-address="https://app.evidently.cloud/"
-team_id="YOUR_TEAM_ID"
-dataset_name="YOUR_TRACING_DATASET_NAME"
+# Model configs
+TEMPERATURE=0.5
+TOP_P=0.9
+MAX_TOKENS=512
+
+# OpenAI configs
+OPENAI_MODEL='gpt-4o-mini'
+OPENAI_API_KEY=""
+
+# For opik config using environment variables see https://www.comet.com/docs/opik/tracing/sdk_configuration#using-environment-variables
+OPIK_API_KEY=""
+OPIK_WORKSPACE=""
+OPIK_PROJECT_NAME=""
