--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -18,29 +18,4 @@ jobs:
           python-version: '3.10.8'
 
       - name: test
-        run: pip install pytest && pytest
-
-
-  
-
-    # steps:
-    # - uses: actions/checkout@v4
-    # - uses: actions/setup-python@v4
-    #   with:
-    #    python-version: '3.12'
-
-    #- name: configure
-      #run: ./configure
-    # - name: Install base dep's
-    #   run: pip3 install -r requirements.txt
-
-    # - name: Install dependencies
-    #   working-directory: ./rag-app
-    #  run: make install
-
-    #- name: Run tests
-      #working-directory: ./rag-app
-      #run: make test
-
-    #- name: Run distcheck
-    #  run: make distcheck
+        run: echo "Configure env and run tests here ..."
