Simplifying away for the project.

--- a/rag-app/.env.example
+++ b/rag-app/.env.example
@@ -5,7 +5,7 @@ POSTGRES_PORT=5432
 POSTGRES_HOST=localhost
 
 ARXIV_API_URL = "http://export.arxiv.org/api/query"
-DATA_PATH = './data'
+DATA_PATH = './papers-downloads'
 APP_NAME="Oxford GenAI LLMOps Project "
 
 ENVIRONMENT=dev
