Initial commit with GitHub Actions CI for basic_functions

--- a/rag-app/pyproject.toml
+++ b/rag-app/pyproject.toml
@@ -24,6 +24,7 @@ opik = "^1.0.4"
 pytest-asyncio = "^0.24.0"
 streamlit = "^1.42.0"
 pytest-cov = "^6.0.0"
+pytest = "^8.3.5"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.7"
